--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
-<!-- ICS20-Unit5-06-Loop -->
+<!-- ICS20-Unit5-08-Loop -->
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="My first while loop" />
+    <meta name="description" content="My while loop" />
     <meta name="keywords" content="mths, ics2o" />
     <meta name="author" content="Julienka-Sohal" />
     <meta name="theme-color" content="#FFFFFF" />
-    <title>My first while loop</title>
+    <title>My while loop</title>
     <link
       rel="canonical"
-      href="https://julienka-sohal.github.io/ICS20-Unit5-06-Loop/"
+      href="https://julienka-sohal.github.io/ICS20-Unit5-08-JS/"
     />
-    <link rel="manifest" href="/ICS20-Unit5-06-Loop/manifest.webmanifest" />
+    <link rel="manifest" href="/ICS20-Unit5-08-JS/manifest.webmanifest" />
     <link rel="stylesheet" href="./css/styles.css" />
     <!--- None blocking for Lighthouse report --->
     <!--- https://stackoverflow.com/questions/32759272/how-to-load-css-asynchronously --->
@@ -45,7 +45,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
   </head>
-  <title>My first while loop</title>
+  <title>My while loop</title>
   <body>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <script src="./js/script.js"></script>
@@ -64,7 +64,7 @@
           height="25%"
         />
         <p></p>
-        <h3>Multiply? No, Repetitive addition!</h3>
+        <h3>Divide? No, Repetitive subtraction!</h3>
         <div>
           <!-- Simple Textfield -->
           <form action="#">
